Creating my first API

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World how are you</h1>
+    <input  id="input" placeholder="Enter Your text here" type ="text">
+    <button id="btn">Save Me</button>
+    <ul id="parent"></ul>
+    <script src="index.js"></script>
 </body>
 </html>
